<resources>
    <!--Task keeper ? Task Hunter ?-->
    <string name="app_name">To do list</string>
    <string name="app_title">Tarefas</string>
    <string name="task_title">Titulo</string>
    <string name="task_new">Nova Tarefa</string>
    <string name="task_description">Descrição</string>
    <string name="task_date">Data</string>
    <string name="task_hour">Horário</string>
    <string name="task_create">Salvar Tarefa</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="no_task">Ops! Você não possui nenhuma tarefa</string>
    <string name="create_task">Criar Tarefa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_list">Lista de Tarefas</string>
    <string name="update_task">Editar Tarefa</string>
</resources>