<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.UpdateFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_update_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_start2"
        app:layout_constraintEnd_toEndOf="@id/gl_end2"
        android:hint="@string/task_title"
        android:layout_marginTop="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_new"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_update_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_update_title"
        app:layout_constraintStart_toStartOf="@id/gl_start2"
        app:layout_constraintEnd_toEndOf="@id/gl_end2"
        android:hint="@string/task_description"
        android:layout_marginTop="32dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="start"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_update_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_update_description"
        app:layout_constraintStart_toStartOf="@id/gl_start2"
        app:layout_constraintEnd_toEndOf="@id/gl_center2"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:startIconDrawable="@drawable/ic_calendar"
        android:hint="@string/task_date">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_update_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_update_description"
        app:layout_constraintStart_toStartOf="@id/gl_center2"
        app:layout_constraintEnd_toEndOf="@id/gl_end2"
        android:layout_marginTop="40dp"
        android:layout_marginStart="8dp"
        app:startIconDrawable="@drawable/ic_watch"
        android:hint="@string/task_hour">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_update_task"
        app:layout_constraintStart_toStartOf="@id/gl_start2"
        app:layout_constraintEnd_toEndOf="@id/gl_end2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_start2"
        app:layout_constraintEnd_toEndOf="@id/gl_end2"
        android:layout_marginBottom="16dp"
        android:text="@string/task_create"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>