<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:id="@+id/mini_task">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintEnd_toStartOf="@id/iv_icon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintEnd_toStartOf="@id/iv_icon"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tv_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/task_hour"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintEnd_toStartOf="@id/iv_icon"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        android:layout_marginStart="8dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_more"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_title"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>